--- a/guestbook/route.yaml
+++ b/guestbook/route.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   name: guestbook
 spec:
-  host: guestbook.apps.<your-ocp-cluster-name>.<your-ocp-cluster-domain>
+  host: guestbook.apps.cluster-fjdx6.fjdx6.sandbox225.opentlc.com
   port:
     targetPort: 80
   to:
